Implemented device datails modal + device enable/disable feature

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --highlight: #4daafc;
+  --highlight: #1f75fe;
   --light: #ffffff;
 
   --danger: #d10819;
