--- a/src/index.css
+++ b/src/index.css
@@ -48,22 +48,22 @@
   :root {
     --bg-primary: #212830;
     --bg-secondary: #1a2028;
-    --accent: #2b333e;
+    --accent: #2d343d;
     --accent-secondary: #343d49;
     --text-highlight: #f2f2f3;
-    --text-secondary: #cacaca;
-    --text-primary: #ffffff;
+    --text-secondary: #878787;
+    --text-primary: #c7c7c7;
   }
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-primary: #f0f0f0;
-    --bg-secondary: #e4e6eb;
+    --bg-primary: #ffffff;
+    --bg-secondary: #d3d3d3;
     --accent-secondary: #dddddd;
     --accent: #ffffff;
     --text-highlight: #ffffff;
-    --text-secondary: #9e9e9e;
+    --text-secondary: #888888;
     --text-primary: #3d3d3e;
   }
 }
